[gd_scene load_steps=6 format=3 uid="uid://7a6erjm7d2ux"]

[ext_resource type="Script" path="res://autoloads/music_player.gd" id="1_ftjie"]
[ext_resource type="AudioStream" uid="uid://b1a3olyxxvwso" path="res://assets/music/i don't want this to end (1).mp3" id="2_3b667"]
[ext_resource type="AudioStream" uid="uid://chrpydn3mjnh0" path="res://assets/music/main menu for GMTK2024 (2).mp3" id="3_ors7y"]
[ext_resource type="AudioStream" uid="uid://ijuh8ypvmm6g" path="res://assets/music/dull life1.mp3" id="4_33klv"]
[ext_resource type="AudioStream" uid="uid://cvbl0djpptin7" path="res://assets/music/so its like that.mp3" id="5_q3xnb"]

[node name="MusicPlayer" type="Node"]
script = ExtResource("1_ftjie")

[node name="level3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_3b667")
bus = &"BGM"

[node name="main_menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ors7y")
bus = &"BGM"

[node name="level1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_33klv")
bus = &"BGM"

[node name="level2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_q3xnb")
bus = &"BGM"
